Fixed amenities being clipped

--- a/src/pages/Listing/Listing.style.scss
+++ b/src/pages/Listing/Listing.style.scss
@@ -91,7 +91,7 @@ html,
         }
 
         .amenaties {
-            height: 140px;
+            // height: 140px;
             // background-color: rgb(21, 123, 212);
             margin: 25px 0;
 
